[gd_scene load_steps=6 format=3 uid="uid://75n77ldix6wj"]

[ext_resource type="Script" path="res://enemy.gd" id="1_druon"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_40tht"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_lxua3"]
material = SubResource("StandardMaterial3D_40tht")
size = Vector3(2, 2, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_j1tjx"]
size = Vector3(1, 2, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_mvt7r"]
size = Vector3(3, 3, 3)

[node name="enemy" type="CharacterBody3D"]
script = ExtResource("1_druon")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_max_distance = 10000.0
path_postprocessing = 1
simplify_epsilon = 1.0
avoidance_enabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_lxua3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00675964, 3.57628e-07, 0.00288284)
shape = SubResource("BoxShape3D_j1tjx")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_mvt7r")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
